--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "appdesde0",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -28,5 +27,6 @@
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "uuid4": "^2.0.3"
-  }
+  },
+  "description": ""
 }
