--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^7.3.4",
     "mongoose-paginate-v2": "^1.7.1",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
